[gd_scene load_steps=14 format=3 uid="uid://d3upyn87bfdo0"]

[ext_resource type="Script" path="res://pintu_stage_1.gd" id="1_lp2m2"]
[ext_resource type="Texture2D" uid="uid://bi3swdffd66v1" path="res://Assets/Tileset/PNG/Pintu_Gembok.png" id="2_m0ohj"]
[ext_resource type="FontFile" uid="uid://cpmtt72gu4l38" path="res://Assets/Font/Pixels.ttf" id="3_m0ohj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2kh73"]
atlas = ExtResource("2_m0ohj")
region = Rect2(1, 96, 31, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_81wwp"]
atlas = ExtResource("2_m0ohj")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0l2r"]
atlas = ExtResource("2_m0ohj")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rppq"]
atlas = ExtResource("2_m0ohj")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_llpg6"]
atlas = ExtResource("2_m0ohj")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7i1p"]
atlas = ExtResource("2_m0ohj")
region = Rect2(128, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_668kg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_81wwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0l2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rppq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_llpg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7i1p")
}],
"loop": false,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_mm8he"]
atlas = ExtResource("2_m0ohj")
region = Rect2(129, 96, 31, 31)

[sub_resource type="CircleShape2D" id="CircleShape2D_igtpo"]
radius = 24.020824

[sub_resource type="LabelSettings" id="LabelSettings_lp2m2"]
font = ExtResource("3_m0ohj")
shadow_color = Color(0, 0, 0, 1)

[node name="Pintu_stage1" type="Node2D"]
script = ExtResource("1_lp2m2")

[node name="Terkunci" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_2kh73")

[node name="open_animation" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, 1)
sprite_frames = SubResource("SpriteFrames_668kg")
animation = &"open"

[node name="Terbuka" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 1)
texture = SubResource("AtlasTexture_mm8he")

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_igtpo")

[node name="Label" type="Label" parent="."]
offset_left = -36.0
offset_top = -31.0
offset_right = 37.0
offset_bottom = -18.0
theme_override_font_sizes/font_size = 8
text = "Press [e] to open"
label_settings = SubResource("LabelSettings_lp2m2")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
